command to watch for changes and build with prod parameters, so we don't use local api

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "SevenTV Browser Extension",
   "main": "index.ts",
   "scripts": {
-    "start": "webpack --watch",
+    "start": "webpack --watch --mode production",
+    "start-prod": "webpack --watch --config webpack.prod.config.js --env=MANIFEST_VERSION=2",
     "lint": "tslint -p tsconfig.json",
     "build": "webpack",
     "build-prod-chromium": "webpack --config webpack.prod.config.js --env=MANIFEST_VERSION=2 --env=DIST=dist/chromium",
